# ECSMPlatform

./: .gitignore
ai/media-workers/modules/media-processing/live-clip-runtime/backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
ai/media-workers/modules/media-processing/live-clip-runtime/backend/alembic/: env.py
ai/media-workers/modules/media-processing/live-clip-runtime/backend/app/: __init__.py  config.py  db.py  main.py  migrate.py
ai/media-workers/modules/media-processing/live-clip-runtime/backend/tests/: test_export_routes.py  test_groq_transcriber.py  test_task_duration.py  test_task_lifecycle.py  test_task_progress.py  test_transcriber_selection.py  test_video_fallback_pipeline.py
ai/runtime/modules/content-ai/content-campaign-runtime/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_TENCENT.md  Dockerfile  README.md  docker-compose.yml  feature_creative_ideas.md  migrate.py  nginx.dockerfile  pyproject.toml  replace_logo.py  requirements.txt  start.bat  stop.bat  test_db_connection.py
ai/runtime/modules/content-ai/content-campaign-runtime/app/: main.py
ai/runtime/modules/content-ai/content-campaign-runtime/app/core/: config.py  db.py  errors.py  limits.py  media.py  middleware.py  runtime_context.py
ai/runtime/modules/content-ai/content-campaign-runtime/app/data/: hotspot_calendar.py  platform_rules.py  poster_templates.json  style_tags.json  system_templates.py
ai/runtime/modules/content-ai/content-campaign-runtime/app/dependencies/: auth.py
ai/runtime/modules/content-ai/content-campaign-runtime/app/graph/: state.py  utils.py  workflow.py
ai/runtime/modules/content-ai/content-campaign-runtime/app/models/: __init__.py  batch_task.py  brand.py  calendar.py  image_model.py  platform_variant.py  (+4 more)
ai/runtime/modules/content-ai/content-campaign-runtime/docs/: ARCHITECTURE_DIAGRAM.md
ai/runtime/modules/content-ai/content-campaign-runtime/frontend/: index.html  package-lock.json  package.json  vite.config.js
ai/runtime/modules/content-ai/content-campaign-runtime/nginx/: default.conf  host-nginx.conf
ai/runtime/modules/content-ai/content-campaign-runtime/scripts/: backfill_gallery_thumbnails.py  create_admin.py  init_db.sql  seed_templates.py  test_batch_api.py  test_platform_import.py  test_poster_api.py
ai/runtime/modules/content-ai/content-campaign-runtime/tests/: test_admin_service.py  test_admin_user_api.py  test_backfill_gallery_thumbnails_script.py  test_basic_user_management.py  test_batch_retry_api.py  test_batch_service.py  test_content_capability_errors.py  test_dockerfile_release_speed.py  test_gallery_access_scope.py  test_gallery_service.py  test_image_model_config.py  test_image_prompt_limits.py  test_image_runtime_selection.py  test_media_validation.py  test_poster_service.py  test_profile_service.py  test_runtime_security.py  test_sales_sync_api.py  test_sales_sync_service.py  test_template_admin_api.py  test_template_service.py
ai/runtime/modules/content-ai/content-campaign-runtime/video-renderer/: package-lock.json  package.json  tsconfig.json
ai/runtime/modules/customer-service-ai/sales-knowledge-runtime/backend/: Dockerfile  pyproject.toml
ai/runtime/modules/model-gateway/shared-ai-services/mcp-demo/: .env.example  .gitignore  STARTUP.md  pyproject.toml  step2核心流程与架构解析.md
(+651 files in other folders)
