[project]
name = "content-campaign-runtime"
version = "1.0.0"
description = "AI content campaign and LangGraph workflow runtime"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]>=0.40.0",
    "langgraph>=1.0.7",
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph-checkpoint-postgres>=3.0.3",
    "psycopg[binary,pool]>=3.3.2",
    "psycopg-pool>=3.3.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "greenlet==3.5.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.31.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "argon2-cffi>=25.1.0",
    "structlog>=24.1.0",
    "httpx>=0.28.1",
    "pillow>=10.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
