[project]
name = "mcp-demo"
version = "0.1.0"
description = "MCP 多项目共享服务演示项目"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "openai>=1.60.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "chromadb>=0.6.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
